--- a/HW1/HW1.ipynb
+++ b/HW1/HW1.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f59d068d-ebf5-47d2-9b31-ebae7a3381a2",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Homework1\n",
+    "\n",
+    "I'm Shlemon and it has been almost 30 years ago since I used to be a maths/physics student. \n",
+    "\n",
+    "I've been working as a highschool teacher for many years, but decided to update and develop my knowledge in order to transition into Data Science eventually. \n",
+    "\n",
+    "My previous experience of Data Science is basically introductory courses in Python and R programming."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3489d3cf-0586-4963-92ed-d46e3cea9fa5",
+   "id": "fba609b2-15bb-4bcc-b7d1-6c164d9f7d6f",
    "metadata": {},
    "outputs": [],
    "source": []
