--- a/HW1/HW1.ipynb
+++ b/HW1/HW1.ipynb
@@ -9,11 +9,13 @@
    "source": [
     "# Homework1\n",
     "\n",
-    "I'm Shlemon and it has been almost 30 years ago since I used to be a maths/physics student. \n",
+    "Introduction\n",
     "\n",
-    "I've been working as a highschool teacher for many years, but decided to update and develop my knowledge in order to transition into Data Science eventually. \n",
+    "*I'm Shlemon and it has been almost 30 years ago since I used to be a maths/physics student.* \n",
     "\n",
-    "My previous experience of Data Science is basically introductory courses in Python and R programming."
+    "*I've been working as a highschool teacher for many years, but decided to update and develop my knowledge in order to transition into Data Science eventually.* \n",
+    "\n",
+    "*My previous experience of Data Science is basically introductory courses in Python and R programming.*"
    ]
   },
   {
