--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -1373,26 +1373,16 @@
    "id": "0f5cec07-f500-4a6d-89b6-7c9efa7268b3",
    "metadata": {},
    "source": [
+    "Not completed...\n",
+    "\n",
     "Questions about the dataset.\n",
     "\n",
     "Look into variables:\n",
-    "lokalnamn\n",
-    "Artnamn - observed how many different\n",
+    "\n",
+    "lokalnamn - distribution of where observed\n",
+    "\n",
+    "Artnamn - how many different species observed\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "id": "a8881cad-ad67-4e52-a403-a58c4229f4b3",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#df_artport.isna().sum()\n",
-    "#df_artport.loc[df_artport.duplicated()]\n",
-    "#df_artport['Lokalnamn'].unique()"
    ]
   },
   {
@@ -1860,7 +1850,7 @@
    "id": "29b844ec-d4c3-484a-8e97-fc593c95108f",
    "metadata": {},
    "source": [
-    "## Assignment is not comp"
+    "## Assignment is not completed......"
    ]
   }
  ],
