--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "32bc486d-1a38-4aeb-a29b-25c88f686fc4",
    "metadata": {
     "tags": []
@@ -1850,8 +1850,203 @@
    "id": "29b844ec-d4c3-484a-8e97-fc593c95108f",
    "metadata": {},
    "source": [
-    "## Assignment is not completed......"
+    "## Assignment is not completed......\n",
+    "\n",
+    "work in progress..."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffe3ce65-e45c-4703-848f-9697c4c371c5",
+   "metadata": {},
+   "source": [
+    "## Part 4 - Data preparation\n",
+    "\n",
+    "#### Cleaning data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e6a63887-0635-4a0b-bb08-41fa9dbfd2f2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iso-3</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CHN</td>\n",
+       "      <td>1.290000e+09</td>\n",
+       "      <td>1.360000e+09</td>\n",
+       "      <td>1.470000e+09</td>\n",
+       "      <td>1.650000e+09</td>\n",
+       "      <td>1.730000e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>IND</td>\n",
+       "      <td>1.000000e+09</td>\n",
+       "      <td>1.130000e+09</td>\n",
+       "      <td>1.170000e+09</td>\n",
+       "      <td>1.180000e+09</td>\n",
+       "      <td>1.150000e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>3.820000e+08</td>\n",
+       "      <td>3.960000e+08</td>\n",
+       "      <td>4.000000e+08</td>\n",
+       "      <td>4.220000e+08</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>IDN</td>\n",
+       "      <td>3.390000e+08</td>\n",
+       "      <td>3.860000e+08</td>\n",
+       "      <td>4.350000e+08</td>\n",
+       "      <td>3.190000e+08</td>\n",
+       "      <td>3.450000e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BRA</td>\n",
+       "      <td>2.580000e+08</td>\n",
+       "      <td>2.440000e+08</td>\n",
+       "      <td>2.180000e+08</td>\n",
+       "      <td>2.070000e+08</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  iso-3          2015          2016          2017          2018          2019\n",
+       "0   CHN  1.290000e+09  1.360000e+09  1.470000e+09  1.650000e+09  1.730000e+09\n",
+       "1   IND  1.000000e+09  1.130000e+09  1.170000e+09  1.180000e+09  1.150000e+09\n",
+       "2   USA  3.820000e+08  3.960000e+08  4.000000e+08  4.220000e+08           NaN\n",
+       "3   IDN  3.390000e+08  3.860000e+08  4.350000e+08  3.190000e+08  3.450000e+08\n",
+       "4   BRA  2.580000e+08  2.440000e+08  2.180000e+08  2.070000e+08           NaN"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cellPhones = pd.read_csv('cell_phones_total.csv')\n",
+    "\n",
+    "#make sure to display all columns\n",
+    "#pd.set_option('display.max_columns', 100)\n",
+    "\n",
+    "# check columns for missing values\n",
+    "# missing_values = df_cellPhones.isna().sum()\n",
+    "\n",
+    "#print('Columns with missing values:')\n",
+    "#print(missing_values)\n",
+    "\n",
+    "#fill in missing values (replaces all NaN, None or pd.NA) \n",
+    "df_cellPhones.fillna(value=pd.NA, inplace=True)\n",
+    "\n",
+    "# Remove columns with all missing values \n",
+    "df_cellPhones.dropna(axis=\"columns\", how=\"all\")\n",
+    "\n",
+    "\n",
+    "#convert cell values to a float or NaN\n",
+    "def convert_to_number(n):\n",
+    "    \n",
+    "    if isinstance(n, str):\n",
+    "        \n",
+    "        n = n.strip()\n",
+    "            \n",
+    "        if n.endswith('k'):\n",
+    "            return float(n[:-1]) * 1e3\n",
+    "        \n",
+    "        elif n.endswith('M'):\n",
+    "            return float(n[:-1]) * 1e6\n",
+    "        \n",
+    "        elif n.endswith('B'):\n",
+    "             return float(n[:-1]) * 1e9\n",
+    "        \n",
+    "        elif n == '':\n",
+    "            return np.nan\n",
+    "        else:\n",
+    "            float(n)\n",
+    "    elif pd.isnull(n):\n",
+    "        return np.nan\n",
+    "    else:\n",
+    "        n\n",
+    "\n",
+    "#select columns representig years\n",
+    "year_columns = df_cellPhones.columns.drop('iso-3')\n",
+    "\n",
+    "#loop through columns and convert entries to float\n",
+    "for col in year_columns:\n",
+    "    df_cellPhones[col] = df_cellPhones[col].apply(convert_to_number)\n",
+    "    \n",
+    "\n",
+    "# Make sure all data is numeric\n",
+    "df_cellPhones[year_columns] = df_cellPhones[year_columns].apply(pd.to_numeric, errors='coerce')\n",
+    "\n",
+    "# Select columns to display\n",
+    "selected_columns = ['iso-3', '2015', '2016', '2017', '2018', '2019']\n",
+    "\n",
+    "# Select year columns 1960 - 1980 where no available cellphones\n",
+    "columns_to_fill = [col for col in df_cellPhones.columns if col.isdigit() and int(col)<= 1980]\n",
+    "\n",
+    "#fill all NaN entries with 0 for the selected columns \n",
+    "df_cellPhones[columns_to_fill] = df_cellPhones[columns_to_fill].fillna(0)\n",
+    "\n",
+    "# Sort values by year 2015 in descending order\n",
+    "df_cellPhones = df_cellPhones[selected_columns].sort_values(by='2015', ascending=False)\n",
+    "\n",
+    "# Reset row index\n",
+    "df_cellPhones.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "\n",
+    "df_cellPhones[selected_columns].head()   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d9026db-7aa3-4bf9-946a-33457cc5ab97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
