--- a/HW5/HW5.ipynb
+++ b/HW5/HW5.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Request data about nobelprizes in physics between from year 2000 to 2010\n",
+    "Request data about nobelprizes in physics from year 2000 to 2010\n",
     "at a specified loaction.\n"
    ]
   },
