--- a/HW4/HW4.ipynb
+++ b/HW4/HW4.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "id": "bf46dfcb-acbc-44ad-873c-a21ee0537d07",
    "metadata": {
     "tags": []
@@ -140,7 +140,7 @@
        "4   AND     71300.0     76100.0     80300.0     82600.0     87900.0"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,15 +151,16 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "# Enable to display all columns to see what the variables are \n",
     "pd.set_option('display.max_columns', 100)\n",
-    "#pd.set_option('display.max_rows', 300)\n",
     "\n",
+    "# Read data and store in dataframe\n",
     "df_cellPhones = pd.read_csv('cell_phones_total.csv')\n",
     "\n",
-    "#fill in missing values (replaces all NaN, None or pd.NA) \n",
+    "# Fill in missing values (replaces all NaN, None or pd.NA) \n",
     "df_cellPhones.fillna(value=pd.NA, inplace=True)\n",
     "\n",
-    "# Remove columns with all missing values \n",
+    "# Remove columns with all missing values since no country has data for the specific year\n",
     "df_cellPhones.dropna(axis=\"columns\", how=\"all\", inplace=True)\n",
     "\n",
     "# Remove rows with all missing values\n",
@@ -201,10 +202,10 @@
     "        n\n",
     "\n",
     "        \n",
-    "#select columns representig years\n",
+    "# Select columns representing years\n",
     "year_columns = df_cellPhones.columns.drop('iso-3')\n",
     "\n",
-    "#loop through columns and convert entries to float\n",
+    "# Loop through columns and convert entries to float\n",
     "for col in year_columns:\n",
     "    df_cellPhones[col] = df_cellPhones[col].apply(convert_to_number)\n",
     "    \n",
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 24,
    "id": "05926c9c-0ac0-44a4-8f31-8fa6ddd28ba8",
    "metadata": {
     "tags": []
@@ -255,7 +256,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of empty strings or spaces: 0\n"
+      "Number of empty strings or spaces: 0\n",
+      "Number of rows with any missing value: 1\n",
+      "\n"
      ]
     },
     {
@@ -766,7 +769,7 @@
        "4   33428486.0  "
       ]
      },
-     "execution_count": 198,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +782,7 @@
     "pd.set_option('display.max_rows', 300)\n",
     "\n",
     "# Display part of data\n",
-    "df_pop.head()\n",
+    "#df_pop.head()\n",
     "\n",
     "# Check the datatype of columns to make sure it is float object\n",
     "#df_pop.info()\n",
@@ -787,14 +790,16 @@
     "#fill in missing values (replaces all NaN, None or pd.NA) \n",
     "df_pop.fillna(value=pd.NA, inplace=True)\n",
     "\n",
-    "# Check if there are entries containing empty space\n",
+    "# Check if there are entries containing empty space.\n",
+    "# Add up all in each column first and then add up the sum in each column.\n",
     "num_empty = df_pop.map(lambda x: isinstance(x, str) and x.strip() == \"\").sum().sum()\n",
+    "\n",
     "print(f\"Number of empty strings or spaces: {num_empty}\")\n",
     "\n",
     "# Remove first column in dataset due to irrelevant data\n",
     "df_pop.drop(df_pop.columns[0], axis=1, inplace=True)\n",
     "\n",
-    "# Select all columns representing years\n",
+    "# Select all columns representing years, starting 1960\n",
     "columns_to_check = df_pop.loc[:, \"1960\":].columns\n",
     "\n",
     "# Check rows with all missing values\n",
@@ -803,12 +808,12 @@
     "# Remove rows with all missing values\n",
     "df_pop.drop(index=df_pop[rows_with_all_nan].index, inplace=True)\n",
     "\n",
-    "# Check rows with any missing values\n",
+    "# Check rows with any missing values.\n",
     "rows_with_any_nan = df_pop[df_pop.isna().any(axis=1)]\n",
+    "print(f\"Number of rows with any missing value: {len(rows_with_any_nan)}\\n\")\n",
     "\n",
     "# Display table \n",
-    "df_pop.head()\n",
-    "\n"
+    "df_pop.head()\n"
    ]
   },
   {
